hphp/hack/test/typecheck/expression_trees/await_in_splice_xhp_cond.php.exp
ERROR: File "await_in_splice_xhp_cond.php", line 21, characters 33-55:
`await` cannot be used as an expression in this location because it's conditionally executed. (Parsing[1002])
